# hive

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  todo.md
.claude/: hooks.json
.github/workflows/: ci.yml
docs/: dogfooding-process.md  findings-hybrid-worktree.md
docs/plans/: 2026-03-08-active-review.md  2026-03-08-agent-lifecycle-design.md  2026-03-08-agent-work-preservation-design.md  2026-03-08-agent-work-preservation.md  2026-03-08-closed-loop-design.md  2026-03-08-closed-loop-implementation.md  2026-03-08-event-driven-orchestration.md  2026-03-08-fix-lead-delegation.md  2026-03-08-hive-implementation.md  2026-03-08-hive-mind.md  2026-03-08-hive-spec.md  2026-03-08-message-delivery.md  2026-03-08-speculative-swarm-design.md  2026-03-08-speculative-swarm-plan.md  2026-03-08-tui-redesign.md  2026-03-09-tui-task-hierarchy-design.md  2026-03-09-tui-task-hierarchy-plan.md  2026-03-10-review-merge-automation.md  2026-03-10-review-verdict-auto-wake.md  2026-03-10-tui-agent-output-viewer.md  2026-03-11-agent-reliability-improvements.md  2026-03-13-remove-hardcoded-main-branch.md  2026-03-19-hive-pi-implementation.md  2026-03-19-hive-pi-rewrite-design.md  flexible-task-status-design.md  phase-2-quality-gates.md  phase-2b-fix-merge-safety.md  phase-3-error-recovery.md  (+4 more)
hive-pi/: EDGE-CASES.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
specs/: heartbeat-updates.md
src/: agent.rs  cli.rs  git.rs  logging.rs  main.rs  mcp.rs  mcp.rs.bak  output.rs  state.rs  tui.rs  types.rs  wait.rs  web.rs
tests/: integration_tests.rs
(+65 files in other folders)
