[package]
name = "hive"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
rmcp = { version = "1.1.0", features = ["server", "transport-io", "macros"] }
schemars = "1.2.1"
ratatui = "0.30.0"
crossterm = "0.29.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
libc = "0.2"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
